--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   webview_flutter: ^0.3.15+1
   url_launcher: ^5.2.7
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,9 +46,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/pictures/
+    - assets/illustrations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,7 +61,31 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family:  Arrow
+      fonts:
+        - asset: assets/icons/Arrow.ttf
+
+    - family:  FAQ
+      fonts:
+        - asset: assets/icons/FAQ.ttf
+
+    - family:  DeinOrt
+      fonts:
+        - asset: assets/icons/DeinOrt.ttf
+
+    - family:  Feed
+      fonts:
+         - asset: assets/icons/Feed.ttf
+
+    - family:  PlayButton
+      fonts:
+         - asset: assets/icons/PlayButton.ttf
+
+    - family:  Podcast
+      fonts:
+        - asset: assets/icons/Podcast.ttf
+
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
